--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,22 +6,9 @@
     "configurations": [
         {
             "type": "java",
-            "name": "CodeLens (Launch) - Adventure",
+            "name": "CodeLens (Launch) - Conditionals",
             "request": "launch",
-            "mainClass": "Adventure"
-        },
-        {
-            "type": "java",
-            "name": "CodeLens (Launch) - test",
-            "request": "launch",
-            "mainClass": "test"
-        },
-        {
-            "type": "java",
-            "name": "CodeLens (Launch) - GuessMyNumber",
-            "request": "launch",
-            "mainClass": "GuessMyNumber",
-            "projectName": "AP-Computer-Science_8986052e"
+            "mainClass": "Conditionals"
         },
         {
             "type": "java",
@@ -31,15 +18,9 @@
         },
         {
             "type": "java",
-            "name": "Debug (Launch)-HelloWorld",
+            "name": "Debug (Launch)-Adventure",
             "request": "launch",
-            "mainClass": "HelloWorld"
-        },
-        {
-            "type": "java",
-            "name": "Debug (Launch)-Password",
-            "request": "launch",
-            "mainClass": "Password"
+            "mainClass": "Adventure"
         }
     ]
 }
